@@ -18,7 +18,7 @@ $Id$
 __docformat__ = 'restructuredtext'
 
 from zope.size.interfaces import ISized
-from zope.app.file.browser.file import FileView
+from zope.app.file.browser.file import FileView, cleanupFileName
 from zope.traversing.browser.absoluteurl import absoluteURL
 
 
@@ -107,6 +107,6 @@ class ImageAdd(object):
             filename = getattr(self.request.form.get("field.data"),
                                "filename", None)
             if filename is not None:
-                self.request.form["add_input_name"] = filename
+                self.request.form["add_input_name"] = cleanupFileName(filename)
 
         return super(ImageAdd,self).update()
